.tanzu/config/httproute-postgres-music.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/postgres-music
  name: postgres-music-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: postgres-music
  rules:
  - backendRefs:
    - kind: Service
      name: postgres-music
      port: 8080
